--- a/static/styles.css
+++ b/static/styles.css
@@ -292,7 +292,7 @@ label {
 	flex-direction: column;
 	align-items: center;
 	width: 100%;
-	height: 65vh;
+	height: 60vh;
 	overflow-y: auto; /* Scroll only within the history page */
 	overflow-x: hidden;
 }
@@ -351,6 +351,7 @@ label {
 	border-radius: 5px;
 	width: 100%;
 	max-width: 300px; /* Ensures the dropdown does not stretch too wide on larger screens */
+	min-width: 150px;
 	border: 2px solid #bbb;
 	background-color: #fff;
 	color: #343434;
@@ -370,22 +371,20 @@ label {
 }
 
 .export-btn {
-	display: inline-block; /* Ensures the button flows in line but can be sized */
-	padding: 10px 20px; /* Add padding for aesthetic spacing */
-	font-size: 16px; /* Set font size for readability */
-	color: white; /* Text color */
-	background-color: #343434; /* Button color */
-	border: none; /* Remove any default border */
-	border-radius: 5px; /* Optional: round the corners */
-	cursor: pointer; /* Change mouse cursor to pointer to indicate it's clickable */
-	text-align: center; /* Center the text inside the button */
-	white-space: nowrap; /* Prevents the text from wrapping to a new line */
-	overflow: hidden; /* Keep all text inside the button's bounding box */
-	text-overflow: ellipsis; /* Add an ellipsis if the text overflows */
-	vertical-align: middle; /* Aligns the button in line with adjacent text or buttons */
-	transition: background-color 0.3s; /* Smooth transition for hover effects */
-	width: 100%;
-	margin-left: 40px;
+	display: inline-block;
+	padding: 10px 20px;
+	font-size: 16px;
+	color: white;
+	background-color: #343434;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	text-align: center;
+	vertical-align: middle;
+	transition: background-color 0.3s;
+	width: auto; /* Adjust width to be auto so it expands with content */
+	min-width: 50%; /* Ensure it's at least full width of container */
+	margin-left: 30px;
 }
 
 .export-btn:hover {
