--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,26 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/static/css/styles.css" />
-		<link rel="manifest" href="/manifest.json" />
+		<link
+			rel="icon"
+			href="{{ url_for('static', filename='images/favicon.ico') }}"
+		/>
+		<link
+			rel="manifest"
+			href="{{ url_for('static', filename='manifest.json') }}"
+		/>
+		<link
+			rel="apple-touch-icon"
+			href="{{ url_for('static', filename='images/apple-touch-icon.png') }}"
+		/>
+
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta
 			name="apple-mobile-web-app-status-bar-style"
 			content="black-translucent"
 		/>
 		<meta name="apple-mobile-web-app-title" content="Controle de Presença" />
-		<title>Controle de Presença</title>
+		<title>Arrivus</title>
 	</head>
 	<body>
 		<div class="container">
