--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+		/>
 		<link rel="stylesheet" href="/static/css/styles.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100&display=swap"
+			rel="stylesheet"
+		/>
 		<link
 			rel="icon"
 			href="{{ url_for('static', filename='images/favicon.ico') }}"
@@ -28,8 +37,14 @@
 	<body>
 		<div class="container">
 			<div class="top">
-				<div class="circle"></div>
-				<div class="title"><h1>Controle de Presença</h1></div>
+				<h1>Arrivus</h1>
+				<button class="refresh-button" onclick="refreshPage();">
+					<img
+						src="{{ url_for('static', filename='images/refresh-icon.svg') }}"
+						alt="Refresh"
+					/>
+				</button>
+				<div class="divider"></div>
 			</div>
 			<div class="middle" id="content-area">
 				<!-- Default Home Content -->
