Reorganize code structure into modules

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,10 +17,7 @@
 			rel="icon"
 			href="{{ url_for('static', filename='images/favicon.ico') }}"
 		/>
-		<link
-			rel="manifest"
-			href="{{ url_for('static', filename='manifest.json') }}"
-		/>
+		<link rel="manifest" href="/static/manifest.json" />
 		<link
 			rel="apple-touch-icon"
 			href="{{ url_for('static', filename='images/apple-touch-icon.png') }}"
