Reorganize code structure into modules

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,7 +32,7 @@
 	</head>
 	<body>
 		<div id="install-container" style="display: none">
-			<button id="install-button">Instalar Aplicativo</button>
+			<button id="install-button">Install App</button>
 		</div>
 		<div id="login-container" style="display: none">
 			<form id="login-form">
@@ -122,7 +122,7 @@
 				</nav>
 			</div>
 		</div>
-		<script src="/static/js/script.js"></script>
+		<script type="module" src="/static/js/main.js"></script>
 		<script>
 			if ('serviceWorker' in navigator) {
 				window.addEventListener('load', function () {
